# local-photo-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/photo_analyzer/: __init__.py
src/photo_analyzer/analyzer/: llm_client.py
src/photo_analyzer/cli/: main.py
src/photo_analyzer/core/: config.py
src/photo_analyzer/pipeline/: __init__.py  audio_analyzer.py  video_analyzer.py
src/photo_analyzer/utils/: audio.py  video.py
src/photo_analyzer/web/: app.py
